[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "chronoshield"
version = "1.0.0"
description = "Python SDK for the ChronoShield API — DST-aware datetime validation, resolution, and conversion"
readme = "README.md"
license = "ISC"
requires-python = ">=3.8"
keywords = ["timezone", "dst", "daylight-saving", "datetime", "validation", "utc", "iana", "chronoshield"]

[project.urls]
Homepage = "https://chronoshieldapi.com/docs"
Repository = "https://github.com/Mike-Mait/ChronoShield-API"
